--- a/Report Project1/ListOfRenewals.rdl
+++ b/Report Project1/ListOfRenewals.rdl
@@ -133,7 +133,7 @@
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>0.88021in</Width>
+                  <Width>1.04688in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1.51562in</Width>
@@ -170,7 +170,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Asp no</Value>
+                                  <Value>ASP/DSP no</Value>
                                   <Style>
                                     <FontFamily />
                                     <FontSize>11pt</FontSize>
@@ -1083,14 +1083,14 @@
             <Top>0.09667in</Top>
             <Left>2.24896cm</Left>
             <Height>0.43in</Height>
-            <Width>10.79167in</Width>
+            <Width>10.95834in</Width>
             <Style />
           </Tablix>
         </ReportItems>
         <Height>0.71417in</Height>
         <Style />
       </Body>
-      <Width>11.70834in</Width>
+      <Width>11.84375in</Width>
       <Page>
         <PageHeader>
           <Height>2.06375cm</Height>
