--- a/Report Project1/MaHolder_ApprovedProductsReport.rdl
+++ b/Report Project1/MaHolder_ApprovedProductsReport.rdl
@@ -125,7 +125,7 @@ where ISNULL(ps.ApprovalDate,'')!='' and ISNULL(ps.Deregistered,'')='' and ISNUL
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>0.75521in</Width>
+                  <Width>1.0873in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1.44917in</Width>
@@ -165,7 +165,7 @@ where ISNULL(ps.ApprovalDate,'')!='' and ISNULL(ps.Deregistered,'')='' and ISNUL
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Asp no</Value>
+                                  <Value>ASP/DSP no</Value>
                                   <Style>
                                     <FontFamily />
                                     <FontSize>11pt</FontSize>
@@ -891,7 +891,7 @@ where ISNULL(ps.ApprovalDate,'')!='' and ISNULL(ps.Deregistered,'')='' and ISNUL
             <Top>0.19389in</Top>
             <Left>1.905cm</Left>
             <Height>0.52028in</Height>
-            <Width>11.78125in</Width>
+            <Width>12.11334in</Width>
             <Style />
           </Tablix>
         </ReportItems>
