--- a/Report Project1/MaHolder_NonActiveProductsReport.rdl
+++ b/Report Project1/MaHolder_NonActiveProductsReport.rdl
@@ -124,31 +124,31 @@
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>0.75521in</Width>
+                  <Width>0.98323in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.44917in</Width>
+                  <Width>1.45843in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.9154in</Width>
+                  <Width>0.92466in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.85938in</Width>
+                  <Width>1.86864in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.22917in</Width>
+                  <Width>1.23843in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.59375in</Width>
+                  <Width>1.60301in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.65625in</Width>
+                  <Width>0.66551in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.66667in</Width>
+                  <Width>1.67593in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.65625in</Width>
+                  <Width>1.66551in</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -164,7 +164,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Asp no</Value>
+                                  <Value>ASP/DSP no</Value>
                                   <Style>
                                     <FontFamily />
                                     <FontSize>11pt</FontSize>
@@ -1194,9 +1194,9 @@
               </Filter>
             </Filters>
             <Top>0.12097in</Top>
-            <Left>2.48392cm</Left>
+            <Left>2.27225cm</Left>
             <Height>0.52028in</Height>
-            <Width>11.78125in</Width>
+            <Width>12.08334in</Width>
             <Style />
           </Tablix>
         </ReportItems>
