--- a/Report Project1/NotMarketedProductsReport.rdl
+++ b/Report Project1/NotMarketedProductsReport.rdl
@@ -339,7 +339,7 @@ where ps.LanseringsDatumEnd &lt;= @ToDate
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Asp no</Value>
+                                  <Value>ASP/DSP no</Value>
                                   <Style>
                                     <FontFamily />
                                     <FontSize>11pt</FontSize>
