--- a/Report Project1/PsurListReport.rdl
+++ b/Report Project1/PsurListReport.rdl
@@ -188,7 +188,7 @@ order by ps.PsurPeriodStart</CommandText>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Asp no</Value>
+                                  <Value>ASP/DSP no</Value>
                                   <Style>
                                     <FontFamily />
                                     <FontSize>11pt</FontSize>
